frontend/install/kubernetes/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: odh-apps-frontend
  name: odh-apps-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: odh-apps-frontend
  template:
    metadata:
      labels:
        app: odh-apps-frontend
    spec:
      containers:
        - image: quay.io/cfchase/odh-apps-frontend:latest
          imagePullPolicy: Always
          name: odh-apps-frontend
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
