frontend/install/kubernetes/base/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: odh-apps-frontend
  name: odh-apps-frontend
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: odh-apps-frontend
